--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mi primer sitio</title>
+  <title>Mi primer sitio web</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
