--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="bg-yellow-600">
+  <nav class="bg-red-600">
     <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
       <div class="relative flex h-16 items-center justify-between">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
